# molvis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  biome.json  package-lock.json  package.json  zensical.toml
.claude/notes/: README.md  architecture.md  notes.md  open-questions.md
.claude/specs/: INDEX.md
.github/workflows/: ci.yml  release-core.yml  release-python.yml
app/: package.json  tsconfig.json
app/src/: index.ts
app_package/src/: index.ts
core/: package.json  rsbuild.config.ts  rsbuild.headless.config.ts  rslib.config.ts  rstest.config.ts  tsconfig.json  tsconfig.tsbuildinfo
core/examples/: headless_render.ts  headless_smoke.json
core/lib/: app.d.ts  app.js  app.js.map  artist.d.ts  artist.js  artist.js.map  axis.d.ts  axis.js  axis.js.map  box.d.ts  box.js  box.js.map  frame.d.ts  frame.js  frame.js.map  (+3 more)
docs/: index.md
example/: molvis_demo.ipynb
page/: README.md  angular.json  index.html  next.config.js  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json  tsconfig.spec.json  webpack.build.config.js  webpack.dev.config.js
python/: .gitignore  README.md  example.ipynb  package-lock.json  package.json  pyproject.toml
python/docs/: quickstart.md
python/docs/api/: commands.md  jupyter.md
python/examples/: pipeline_crud.py
python/js/: widget.css  widget.tsx
python/src/molvis/: __init__.py  cli.py  mdx.py  scene.py  video.py
python/src/molvis/commands/: catalog.py  drawing.py  pipeline.py
python/src/molvis/rpc/: __init__.py  expections.py
python/src/molvis/widget/: __init__.py
python/src/molvis/widget/static/: widget.css
python/tests/: test_mdx.py  test_pipeline_rpc.py  test_scene_smoke.py  test_state_sync.py  test_transport_websocket.py  test_video.py
vsc-ext/: README.md  package-lock.json  package.json  rslib.extension.config.mts  rslib.webview.config.mts  tsconfig.json
vscode-ext/: package-lock.json  package.json
widget/: example.ipynb  package.json
(+340 files in other folders)
