[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molcrafts-molvis"
version = "0.1.0"
description = "Molecular visualization driven by a local WebSocket-hosted page"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
authors = [
    { name = "MolCrafts Team" }
]
keywords = ["molecular", "visualization", "jupyter", "chemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "molcrafts-molpy>=0.8.2",
    "numpy",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "hatchling",
    "pytest>=7.0",
    "pytest-cov",
    "imageio-ffmpeg>=0.6",
    "pillow>=10",
    # test_mdx.py drives the molvis fence through Python-Markdown directly
    # (at docs-build time zensical brings these along).
    "markdown>=3.5",
    "pymdown-extensions>=10.0",
]
video = [
    "imageio-ffmpeg>=0.6",
]
docs = [
    "zensical>=0.0.45",
    "molcrafts-zensical-theme>=0.1.3",
]

[project.scripts]
molvis = "molvis.cli:main"

[project.urls]
Homepage = "https://github.com/molcrafts/molvis"
Repository = "https://github.com/molcrafts/molvis"

[tool.hatch.build]
# Ship the built page bundle inside the wheel — it's hosted by
# WebSocketTransport when no external `page_url` is given.
artifacts = [
    "src/molvis/dist/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/molvis"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
